RESOLVED FIXED 250057
[WebGPU] Opening https://playground.babylonjs.com/ asserts in debug
https://bugs.webkit.org/show_bug.cgi?id=250057
Summary [WebGPU] Opening https://playground.babylonjs.com/ asserts in debug
Mike Wyrzykowski
Reported 2023-01-03 18:41:43 PST
Opening https://playground.babylonjs.com/ asserts in debug
Attachments
Mike Wyrzykowski
Comment 1 2023-01-03 18:42:09 PST
Mike Wyrzykowski
Comment 2 2023-01-03 19:04:39 PST
EWS
Comment 3 2023-01-17 20:21:41 PST
Committed 259015@main (664cd63a8a67): <https://commits.webkit.org/259015@main> Reviewed commits have been landed. Closing PR #8179 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.