[WebGPU] Opening https://playground.babylonjs.com/ asserts in debug https://bugs.webkit.org/show_bug.cgi?id=250057 <radar://103857030>

Reviewed by Myles C. Maxfield.

This function performs a loop over all elements in t and
then a find(r.begin, r.end, item) where item is from t.

The features in descriptor.requiredFeatures are not sorted
and it does not appear they need to be for this function to
work correctly, so we can simply remove the assertions.

* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::includesUnsupportedFeatures):

* Source/WebGPU/WebGPU/Adapter.h:
Make m_capabilities const as it can not be modified after the adapter
is created.

Canonical link: https://commits.webkit.org/259015@main